# pointy

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml
server/src/: laser.rs  main.rs  model.rs  ws.rs
src/: main.rs  ws.rs
web/: package.json
web/src/: App.css  App.js  CursorTracker.js  lib.js
