[package]
name = "pointy"
version = "0.1.0"
authors = ["voxelot"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou="0.10.0"
actix = "0.8.2"
actix-web = "1.0.0"
actix-web-actors = "1.0.0"
env_logger="0.6.2"
actix-files = "0.1.1"