[package]
name = "pointy-server"
version = "0.1.0"
authors = ["Voxelot <brandonkite92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou="0.10.0"
nannou_laser = "0.3"
actix = "0.8.2"
actix-web = "1.0.0"
actix-web-actors = "1.0.0"
env_logger="0.6.2"
actix-files = "0.1.1"
serde="1.0.99"
serde_json="1.0.40"
serde_derive="1.0.99"